sysadmin/grid5000/cassandra/kubernetes/40-loaders.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loaders
  labels:
    app: loaders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loaders
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: loaders
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - loader   
      containers:
      - name: loaders
        image: vsellier/swh-base
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "2000Mi"
            cpu: "500m"
          limits:
            memory: "4000Mi"
            cpu: "1000m"
        lifecycle:
          preStop:
           exec:
             command: ["kill", "1"]
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
          - name: tmp
            mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: loaders
            defaultMode: 0777
        - name: tmp
          emptyDir: {}
