sysadmin/grid5000/cassandra/kubernetes/45-listers.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listers
  labels:
    app: listers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listers
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: listers
    spec:
      containers:
      - name: listers
        image: vsellier/swh-base
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        resources:
          requests:
            memory: "100Mi"
            cpu: "2000m"
          limits:
            memory: "150Mi"
            cpu: "2000m"
        lifecycle:
          preStop:
           exec:
             command: ["kill", "1"]
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: listers
            defaultMode: 0777
