sysadmin/grid5000/cassandra/kubernetes/82-cookers.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookers
  labels:
    app: cookers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookers
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cookers
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker
                operator: In
                values:
                - 'true'
      containers:
      - name: cookers
        image: vsellier/swh-base:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "3000Mi"
            cpu: "1200m"
        lifecycle:
          preStop:
           exec:
             command: ["kill", "1"]
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: cookers
            defaultMode: 0777
