sysadmin/grid5000/cassandra/kubernetes/02-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-statsd-exporter
spec:
  type: ExternalName
  externalName: parasilo-19.rennes.grid5000.fr
