sysadmin/grid5000/cassandra/kubernetes/15-scheduler-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-db
  labels:
    app: scheduler-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-db
  template:
    metadata:
      labels:
        app: scheduler-db
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - parasilo-19.rennes.grid5000.fr
      containers:
      - name: scheduler-db
        image: postgres:13.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        args:
          - "-c"
          - "shared_buffers=5GB"
          - "-c"
          - "effective_cache_size=512MB"
          - "-c"
          - "random_page_cost=1.5"
          - "-c"
          - "max_wal_size=1GB"
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: scheduler-db-pvc
        resources:
          requests:
            memory: "5Gi"
            cpu: "2000m"
          limits:
            memory: "10Gi"
            cpu: "5000m"
      volumes:
        - name: scheduler-db-pvc
          persistentVolumeClaim:
            claimName: scheduler-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-db
spec:
  type: ClusterIP
  selector:
    app: scheduler-db
  ports:
    - port: 5432
      targetPort: 5432
