sysadmin/grid5000/cassandra/kubernetes/29-web-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-db
  labels:
    app: web-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-db
  template:
    metadata:
      labels:
        app: web-db
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: storage
                operator: In
                values:
                - 'true'
      containers:
      - name: web-db
        image: postgres:13.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        args:
          - "-c"
          - "shared_buffers=5GB"
          - "-c"
          - "effective_cache_size=2GB"
          - "-c"
          - "random_page_cost=1.5"
          - "-c"
          - "max_wal_size=1GB"
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: web-db-pvc
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
      volumes:
        - name: web-db-pvc
          persistentVolumeClaim:
            claimName: web-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web-db
spec:
  type: NodePort
  selector:
    app: web-db
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 32437
