sysadmin/grid5000/cassandra/kubernetes/10-objstorage.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: objstorage
  labels:
    app: objstorage
spec:
  replicas: 4
  selector:
    matchLabels:
      app: objstorage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: objstorage
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker
                operator: In
                values:
                - 'true'
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1 
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - objstorage
              topologyKey: kubernetes.io/hostname
      containers:
      - name: objstorage
        image: vsellier/swh-base
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5003
        readinessProbe:
          httpGet:
            path: /
            port: 5003
            scheme: "HTTP"
          initialDelaySeconds: 0
          failureThreshold: 2
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 5003
            scheme: "HTTP"
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 1
        volumeMounts:
        - mountPath: "/srv/softwareheritage/objects"
          name: objstorage-pvc
        - name: config
          mountPath: /etc/softwareheritage/config.yml
          subPath: config.yml
          readOnly: true
        - name: config
          mountPath: /entrypoint.sh
          subPath: entrypoint.sh
          readOnly: true
      volumes:
        - name: config
          configMap:
            name: objstorage
            defaultMode: 0777
        - name: objstorage-pvc
          persistentVolumeClaim:
            claimName: objstorage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: objstorage
spec:
  type: ClusterIP
  selector:
    app: objstorage
  ports:
    - port: 5003
      targetPort: 5003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: objstorage
spec:
  rules:
  - host: objstorage.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: objstorage
            port:
              number: 5003
