sysadmin/grid5000/cassandra/kubernetes/11-storage-vault.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-vault
  labels:
    app: storage-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-vault
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: storage-vault
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker
                operator: In
                values:
                - 'true'
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1 
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - storage
              topologyKey: kubernetes.io/hostname
      containers:
      - name: storage-vault
        image: vsellier/swh-base:D6495
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5002
        readinessProbe:
          httpGet:
            path: /
            port: 5002
            scheme: "HTTP"
          initialDelaySeconds: 0
          failureThreshold: 2
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 5002
            scheme: "HTTP"
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 1
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
        # resources:
        #   requests:
        #     memory: "10000Mi"
        #     cpu: "5000m"
        #   limits:
        #     memory: "15000Mi"
        #     cpu: "10000m"
      volumes:
        - name: config
          configMap:
            name: storage-vault
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: storage-db
---
apiVersion: v1
kind: Service
metadata:
  name: storage-vault
spec:
  type: ClusterIP
  selector:
    app: storage-vault
  ports:
    - port: 5002
      targetPort: 5002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-vault
spec:
  rules:
  - host: storage-vault.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage-vault
            port:
              number: 5002
