sysadmin/grid5000/cassandra/kubernetes/16-rabbitmq.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amqp
  labels:
    app: amqp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp
  template:
    metadata:
      labels:
        app: amqp
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: admin
                operator: In
                values:
                - 'true'
      containers:
      - name: amqp
        image: rabbitmq:3.7-management
        imagePullPolicy: Always
        ports:
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: amqp
spec:
  type: ClusterIP
  selector:
    app: amqp
  ports:
    - port: 5672
      targetPort: 5672
      name: rabbitmq
    - port: 15672
      targetPort: 15672
      name: rabbitmq-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amqp
spec:
  rules:
  - host: rabbitmq.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amqp
            port:
              number: 15672
