sysadmin/grid5000/cassandra/kubernetes/30-webapp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  type: ClusterIP
  selector:
    app: memcached
  ports:
    - port: 11211
      targetPort: 11211
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 5004
      targetPort: 5004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  labels:
    name: webapp
spec:
  rules:
    - host: webapp.default
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp
                port:
                  number: 5004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: vsellier/swh-base:latest
          imagePullPolicy: Always
          command:
            - /entrypoint.sh
          readinessProbe:
            httpGet:
              path: /
              port: 5004
              scheme: "HTTP"
            initialDelaySeconds: 0
            failureThreshold: 2
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 5004
              scheme: "HTTP"
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 1
          resources:
            requests:
              memory: "196Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "512m"
          ports:
            - containerPort: 5004
          volumeMounts:
            - name: config
              mountPath: /etc/softwareheritage/config.yml
              subPath: config.yml
              readOnly: true
            - name: config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: webapp
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: web-db
