sysadmin/grid5000/cassandra/kubernetes/81-vault.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: storage
                operator: In
                values:
                - 'true'
      containers:
      - name: vault
        image: vsellier/swh-base:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5005
        readinessProbe:
          httpGet:
            path: /
            port: 5005
            scheme: "HTTP"
          initialDelaySeconds: 0
          failureThreshold: 2
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 5005
            scheme: "HTTP"
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 1
        volumeMounts:
          - name: db-password
            mountPath: /run/secrets/postgres-password
            subPath: POSTGRES_PASSWORD
            readOnly: true
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
          - name: vault-cache-pvc
            mountPath: "/srv/softwareheritage/vault"
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1536Mi"
            cpu: "300m"
      volumes:
        - name: config
          configMap:
            name: vault
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: vault-db
        - name: vault-cache-pvc
          persistentVolumeClaim:
            claimName: vault-cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - port: 5005
      targetPort: 5005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
spec:
  rules:
  - host: vault.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 5005
